<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_laser"
            android:icon="@drawable/ic_laser"
            android:title="@string/laser_title" />

        <item
            android:id="@+id/nav_spotlight"
            android:icon="@drawable/ic_spotlight"
            android:title="@string/spotlight_title" />

        <item
            android:id="@+id/nav_magnifier"
            android:icon="@drawable/ic_magnifier"
            android:title="@string/magnifier_title" />

        <item
            android:id="@+id/nav_annotation"
            android:icon="@drawable/ic_annotation"
            android:title="@string/annotation_title" />

        <item
            android:id="@+id/nav_recording"
            android:icon="@drawable/ic_recording"
            android:title="@string/recording_title" />

        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_timer"
            android:title="@string/timer_title" />

        <item
            android:id="@+id/nav_voice"
            android:icon="@drawable/ic_voice"
            android:title="@string/voice_title" />
    </group>
</menu>